--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         </style>
     </head>
   <body>
-    <div id="loading"> loading
-        <progress value="0" max="100" id="progress"></progress>
-      <div id="status">Downloading...</div>
-      <div></div>
+    <div id="loading">      
+      <font size="5" face="verdana" color="white">LOADING</font><br>
+      <progress value="0" max="100" id="progress"></progress><br>    
+      <font size="4" face="verdana" color="white">please wait...</font>
+      <div id="status">Downloading...</div>      
     </div>
 
     <div>
