--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 left: 0;
                 right: 0;
                 display: flex;
-                justify-content: space-around;
+                justify-content: center;
                 align-items: center;
             }
             #loading {
