--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             body {
-              background-color: white;
+              background-color: black;
             }
             body > div {
                 position: absolute;
@@ -23,9 +23,9 @@
             }
             progress[value] {
                 appearance: none;
-                background-color: #eee;
+                background-color: grey;
                 border-radius: 3px;
-                box-shadow: 0 2px 3px rgba(0,0,0,.5) inset;
+                box-shadow: 0 2px 3px greenyellow inset;
                 width: 50%;
                 height: 8px
             }
