--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             }
             progress[value] {
                 appearance: none;
-                background-color: grey;
-                border-radius: 3px;
-                box-shadow: 0 2px 3px greenyellow inset;
+                background-color: greenyellow;
+                border-radius: 1px;
+                box-shadow: 0 2px 3px black inset;
                 width: 50%;
                 height: 8px
             }
