--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             }
             progress[value] {
                 appearance: none;
-                background-color: greenyellow;
+                background-color: #eee;
                 border-radius: 1px;
-                box-shadow: 0 2px 3px black inset;
+                box-shadow: 0 2px 3px rgba(0,0,0,.5) inset;
                 width: 50%;
                 height: 8px
             }
